--- a/PowerOverlay.csproj
+++ b/PowerOverlay.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows10.0.17763.0</TargetFramework>
-    <RootNamespace>overlay_popup</RootNamespace>
+    <RootNamespace>PowerOverlay</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
