Adding support for layout positioning

--- a/PowerOverlay.csproj
+++ b/PowerOverlay.csproj
@@ -10,4 +10,8 @@
     <UseWindowsForms>True</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FSharp.Core" Version="6.0.5" />
+  </ItemGroup>
+
 </Project>
