--- a/PowerOverlay/PowerOverlay.csproj
+++ b/PowerOverlay/PowerOverlay.csproj
@@ -9,6 +9,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <UseWindowsForms>True</UseWindowsForms>
     <ApplicationIcon>AppIcon.ico</ApplicationIcon>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
@@ -45,6 +46,10 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="6.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PowerOverlay.Interop\PowerOverlay.Interop.vcxproj" />
   </ItemGroup>
 
   <ItemGroup>
