--- a/PowerOverlay/PowerOverlay.csproj
+++ b/PowerOverlay/PowerOverlay.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <None Remove="AppIcon.ico" />
+    <None Remove="Commands\AudioControl.png" />
     <None Remove="Commands\CloseCommand.png" />
     <None Remove="Commands\ExecuteCommand.png" />
     <None Remove="Commands\PositionWindow.png" />
@@ -37,6 +38,7 @@
     <Resource Include="Commands\SendMouse.png" />
     <Resource Include="Commands\SendKeys.png" />
     <Resource Include="Commands\SendCharacters.png" />
+    <Resource Include="Commands\AudioControl.png" />
     <Resource Include="Commands\Sleep.png" />
     <Resource Include="Commands\ExecuteCommand.png" />
     <Resource Include="Commands\PositionWindow.png" />
