Fixing packaging - include C++ DLL as separate file

--- a/PowerOverlay/PowerOverlay.csproj
+++ b/PowerOverlay/PowerOverlay.csproj
@@ -51,7 +51,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PowerOverlay.Interop\PowerOverlay.Interop.vcxproj" />
+	  <ProjectReference Include="..\PowerOverlay.Interop\PowerOverlay.Interop.vcxproj">
+		  <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	  </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
